--- a/Exercises.ipynb
+++ b/Exercises.ipynb
@@ -6,7 +6,7 @@
       "name": "Exercises.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNXa9jTTvdweR3jkX1JWYSF",
+      "authorship_tag": "ABX9TyPsikKxGcntF+Z6IonmcrTp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,29 +122,63 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 102
         },
-        "outputId": "dd183303-1e76-4f09-82ea-33ccc29c3e55"
+        "outputId": "2b4be7fa-f011-4c21-b8dc-874790bd3584"
       },
       "source": [
-        "grade([50, 90, 91, 88, 75])"
+        "def grade():\n",
+        "  grade_list = [50, 90, 91, 88, 75]\n",
+        "  for i in range(len(grade_list)):\n",
+        "    if 90 <= grade_list[i] <= 100:\n",
+        "      print(\"A\") \n",
+        "    elif 80 <= grade_list[i] <= 89:\n",
+        "      print(\"B\")\n",
+        "    elif 70 <= grade_list[i] <= 79:\n",
+        "      print(\"C\")\n",
+        "    elif 65 <= grade_list[i] <= 69:\n",
+        "      print(\"D\")\n",
+        "    else:\n",
+        "      print(\"Failing\")\n",
+        "grade() "
       ],
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'C'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
+          "output_type": "stream",
+          "text": [
+            "Failing\n",
+            "A\n",
+            "A\n",
+            "B\n",
+            "C\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hBUwr3b5ifCt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "42663c79-43f9-4220-8eaa-85316b50445a"
+      },
+      "source": [
+        "x = float(input())"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4.5\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -153,13 +187,25 @@
       "metadata": {
         "id": "rdOOHURh0Zjr",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4e6d7ae6-74e9-4616-d2e0-b10794e05d0c"
       },
       "source": [
-        ""
+        "print(x)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4.5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -187,10 +233,214 @@
         "colab": {}
       },
       "source": [
-        ""
+        "# def fibonacii(n): return nth fibonacii\n",
+        "def fibonacii_1(n):\n",
+        "  f = []\n",
+        "  f.append(1)\n",
+        "  f.append(1) \n",
+        "  for i in range(2, n):\n",
+        "    f.append(f[i-1] + f[i-2])\n",
+        "  return f[n-1]"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aLpscbBFnagd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "fibonacii_1"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SrxzvshWkoyA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6f88507e-3d9e-4059-9d31-22321d91d793"
+      },
+      "source": [
+        "\n",
+        "def fibonacii_1(n):\n",
+        "  f = [1]*n \n",
+        "  for i in range(2, n):\n",
+        "    f[i] = f[i-1] + f[i-2]\n",
+        "  return f[n-1]  \n"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "55"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sWhu30Z7o5jD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f58247d3-a7f3-40a8-d37c-8ffbb9e89c2a"
+      },
+      "source": [
+        "%timeit fibonacii_1(20)  "
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100000 loops, best of 3: 2.39 µs per loop\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nfDUI3nsm0nE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5b7f5c10-29c6-4abd-8460-44f33a63524c"
+      },
+      "source": [
+        "fibonacii_1(100)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "354224848179261915075"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ik4c6y4nl44-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def fibonacii_2(n):\n",
+        "  if n <=2:\n",
+        "    return 1\n",
+        "  else: \n",
+        "    f = fibonacii(n-1) + fibonacii(n-2)\n",
+        "  return f\n",
+        "  "
+      ],
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BVr6Qh9nlNJ3",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1f94afaf-f3df-4b48-e954-47dc50c41deb"
+      },
+      "source": [
+        "%timeit fibonacii_2(20)"
+      ],
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1000 loops, best of 3: 1.49 ms per loop\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Dagu9WNxnl5i",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def fibonaci(nth):\n",
+        "  a = 0\n",
+        "  b = 1\n",
+        "  for i in range(nth):\n",
+        "    c = a + b\n",
+        "    a = b\n",
+        "    b = c\n",
+        "  return a"
+      ],
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hRWYbZDXnrrH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b6f68882-fb22-4f9a-8062-987cd9271229"
+      },
+      "source": [
+        "fibonaci(10)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "55"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 47
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -200,6 +450,78 @@
       },
       "source": [
         "# Write a function to check if the x is perfect square.  If it is, print \"x is a perfect square\".  If not print \"x is not a perfect square\"."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1kcOf63epiMZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def ifPerfect(n):\n",
+        "  for i in range(0, int(n**(0.5) +1)):\n",
+        "    if i**2 == n:\n",
+        "      return \"perfect\"\n",
+        "  return \"not perfect\"    "
+      ],
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JBcfQMHMqUGa",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def ifPerfect(n):\n",
+        "  i = int(n**(0.5))\n",
+        "  if i**2 == n:\n",
+        "    return \"perfect\"\n",
+        "  return \"not perfect\""
+      ],
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PwXHz30EqNj-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = ifPerfect(1)"
+      ],
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7_Py_9fTrKJy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "21321eda-e5b8-430b-bce2-c6778d26e666"
+      },
+      "source": [
+        "print(a)"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "('perfect', 'hello', 2)\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
